# fastapi-clean-architecture

./: .env.example  Makefile  README.md  pyproject.toml
.github/actions/docker-setup/: action.yaml
.github/workflows/: CI.yaml
resources/docker/: api.dockerfile  ci.app.dockerfile  ci.docker-compose.yaml  local.app.dockerfile  local.docker-compose.yaml
src/: loader.py  main.py
src/application/: unit_of_work.py
src/config/: settings.py
src/core/: container.py
src/core/application/: application_exception.py  base_unit_of_work.py  data_transfer_object.py  event_bus.py  repository.py  use_case.py
src/core/application/exceptions/: event_bus_exceptions.py  repository_exceptions.py
src/core/domain/: aggregate.py  domain_entity.py  domain_event.py  domain_exception.py  value_object.py
src/infrastructure/: faststream_event_bus.py  rabbitmq_event_bus.py
src/infrastructure/faststream/: setup.py
src/kernel/application/exceptions/: unit_of_work_exceptions.py
src/presentation/api/: __init__.py  di.py
src/presentation/consumers/: __init__.py  di.py
tests/system/: test_system_run.py
