[project]
name = "python-clear-architecture-and-ddd-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "fastapi>=0.124.2",
    "pyright>=1.1.407",
    "ruff>=0.14.9",
    "uvicorn>=0.38.0",
]
