[project]
name = "python-clear-architecture-and-ddd-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
linters = [
    "pyright>=1.1.407",
    "ruff>=0.14.9",
]
app = [
    "alembic>=1.17.2",
    "fastapi>=0.124.2",
    "pydantic-settings>=2.12.0",
    "alembic-postgresql-enum>=1.8.0",
    "psycopg[binary]>=3.3.2",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.38.0",
    "faststream[rabbit]>=0.6.4",
    "gunicorn>=23.0.0",
]
tests = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"

include = ["src"]
exclude = ["**/__pycache__"]

reportMissingImports = true
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownVariableType = false
